# javascript-web-to-rust-native

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DEVELOPMENT.md  DIRECTOR_EMBED_DESIGN.md  E2E_DEMO_SUMMARY.md  EMBED_API.md  FINAL_SUMMARY.md  FRAMEWORK_IMPLEMENTATION.md  FRAMEWORK_SUPPORT.md  KNOWN_ISSUES.md  MOBILE_SUPPORT.md  PROGRESS.md  QUICK_START.md  REACT_RUNTIME.md  README.md  RESOURCE_LOADING.md  ROADMAP.md  STATUS.md  SVELTE_RUNTIME.md  TECH_EVALUATION.md  TS_NATIVE_INTEGRATION.md  VUE_PRECOMPILE.md  WORKFLOW_EVALUATION.md  build-scripts-guide.md  code-splitter-guide.md  cranelift-native-compiler-en-US.md  cranelift-native-compiler-zh-CN.md
examples/: compile_simple_dom.rs  css-test.html  final-demo.html  full-syntax-test.js  no-css-test.html  simple-demo.html  simple-dom-generated.rs  simple-dom.js  syntax-test.js
examples/complex-demo/: demo.html  main.rs
scripts/: build-mobile.sh  build-native.ps1  build-native.sh
src/binding-generator/: Cargo.toml
src/binding-generator/src/: lib.rs
src/cranelift-compiler/: Cargo.toml
src/cranelift-compiler/examples/: validate.rs
src/cranelift-compiler/src/: compiler.rs  ir.rs  lib.rs  linker.rs  validator.rs
src/director/: Cargo.toml
src/director/examples/: communication_test.rs  cool_vue_demo.rs
src/director/src/: main.rs
src/jade-native/: Cargo.toml  index.d.ts  package-lock.json  package.json
src/jade-native/src/: lib.rs  rustc_compiler.rs
src/jrust-android/: Cargo.toml
src/jrust-android/src/: bridge.rs  lib.rs  view.rs
src/jrust-browser/: Cargo.toml
src/jrust-browser/examples/: check_all.rs  check_bg.rs  check_bg_colors.rs  check_bg_cover.rs  check_final.rs  check_red.rs  color_test.rs  complex_demo.rs  css_compare_test.rs  css_debug.rs  css_render_test.rs  debug_final.rs  event_test.rs  file_test.rs  final_render.rs  final_render_debug.rs  final_verify.rs  form_test.rs  irisverse_native.rs  irisverse_render.rs  layout_check.rs  network_test.rs  render_debug.rs  render_test.rs  selector_build_test.rs  selector_test.rs  setcss_test.rs  simple_render.rs  test_selectors.rs  utf8_test.rs  window_open_test.rs
src/jrust-browser/src/: bridge.rs  error.rs  lib.rs
src/jrust-ios/: Cargo.toml
src/jrust-ios/src/: bridge.rs  lib.rs  view.rs
src/jrust-platform/: Cargo.toml
src/jrust-platform/src/: event.rs  lib.rs  platform.rs  view.rs
src/jrust-runtime/: Cargo.toml
src/jrust-runtime/benches/: basics.rs
src/jrust-runtime/examples/: basic_usage.rs  benchmark.rs  binding_demo.rs  e2e_demo.rs  e2e_integration.rs  snap_demo.rs  split_demo.rs
src/jrust-runtime/src/: lib.rs
src/jrust-runtime/src/bindings/: angular.rs  lit.rs  mod.rs  preact.rs  qwik.rs  react.rs  solid.rs  svelte.rs
src/jrust-runtime/src/bom/: fetch.rs  location.rs  mod.rs  navigator.rs  storage.rs  window.rs
src/jrust-runtime/src/comm/: mod.rs  process_channel.rs  thread_channel.rs
src/jrust-runtime/src/compiler/: mod.rs  native.rs
src/jrust-runtime/src/core/: array.rs  function.rs  gc.rs  mod.rs  object.rs  string.rs  value.rs
src/jrust-runtime/src/director/: config.rs  core.rs  jrust_tree.rs  mod.rs
src/jrust-runtime/src/dom/: document.rs  element.rs  events.rs  mod.rs  node.rs
src/jrust-runtime/src/gc/: mod.rs
src/jrust-runtime/src/resource/: downloader.rs  loader.rs  mod.rs
src/jrust-runtime/src/utils/: mod.rs
src/jrust-runtime/tests/: core_tests.rs  dom_tests.rs  framework_bindings_test.rs  gc_tests.rs  vue_tests.rs
src/jrust-servo/: Cargo.toml
src/jrust-servo/examples/: jruste_demo.rs
src/jrust-servo/src/: dom_update.rs  error.rs  event_channel.rs  lib.rs  servo_init.rs  snap_injector.rs
src/jrust-translator/: Cargo.toml
src/jrust-translator/examples/: compile_simple_dom.rs  test_super.rs
src/jrust-translator/src/: analyzer.rs  codegen.rs  compiler.rs  dep_processor.rs  error.rs  external_deps.rs  framework.rs  ir_gen.rs  lib.rs  parser.rs  resource.rs  splitter.rs  swc_parser.rs
src/jrust-translator/src/ast/: mod.rs
src/jrust-translator/src/cli/: main.rs
src/ts-native-bridge/: Cargo.toml
src/ts-native-bridge/src/: lib.rs
src/vue-compile-demo/: index.html  package-lock.json  package.json  vite.config.ts
src/vue-compile-demo/src/: App.vue
src/vue-compile-demo/temp_jrust_project/: Cargo.toml
src/vue-compile-demo/temp_jrust_project/src/: main.rs
src/vue-demo/: Cargo.toml
src/vue-demo/src/: main.rs
