[workspace]
resolver = "2"
members = [
    "src/jrust-translator",
    "src/jrust-runtime",
    "src/jrust-browser",
    "src/director",
    "src/vue-demo",
    "src/binding-generator",
    "src/cranelift-compiler",
    "src/jade-native",
    "src/jrust-platform",
    "src/jrust-ios",
    "src/jrust-android",
]

[workspace.metadata.cross]
targets = [
    "aarch64-apple-ios",
    "aarch64-apple-ios-sim",
    "aarch64-linux-android",
    "x86_64-linux-android",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["javascript2rust team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/javascript-web-to-rust-native"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0.98"
owo-colors = "4"
serde = "1.0.225"
serde_derive = "1.0.225"
serde_json = "1.0.140"
thiserror = "1.0.30"
tokio = { version = "1", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
indexmap = "2.5"
hashbrown = "0.15"
rkyv = { version = "0.7", features = ["std"] }

rust-browser = { path = "../../rust-browser/rust-browser" }
