[package]
name = "cranelift-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cranelift = "0.83"
cranelift-codegen = "0.83"
cranelift-frontend = "0.83"
cranelift-module = "0.83"
cranelift-object = "0.83"
cranelift-native = "0.83"
target-lexicon = "0.12"
object = "0.28"
which = "6.0"
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lib]
path = "src/lib.rs"
