[package]
name = "director"
version = "0.1.0"
edition = "2021"

[dependencies]
jrust-translator = { path = "../jrust-translator" }
jrust-runtime = { path = "../jrust-runtime" }
jrust-servo = { path = "../jrust-servo" }
cranelift-compiler = { path = "../cranelift-compiler" }

[[bin]]
name = "director"
path = "src/main.rs"
