[package]
name = "jrust-android"
version = "0.1.0"
edition = "2021"
description = "Android platform support for JRust (Jetpack Compose)"

[dependencies]
jrust-platform = { path = "../jrust-platform" }
jni = "0.21"

[lib]
name = "jrust_android"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
compose = []
