[package]
name = "jrust-browser"
version = "0.1.0"
edition = "2021"
description = "JRust + rust-browser integration bridge"

[dependencies]
rust-browser = { path = "C:/Users/a/Documents/codebuddy-projects/rust-browser/rust-browser", default-features = false, features = ["headless"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
