[package]
name = "jrust-browser"
version = "0.1.0"
edition = "2021"
description = "JRust + servo-zero integration bridge"

[dependencies]
servo-bridge = { path = "C:/Users/a/Documents/codebuddy-projects/servo-without-spidermonkey/servo-zero/bridge", default-features = false, features = ["embed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
