[package]
name = "jrust-servo"
version = "0.1.0"
edition = "2021"
description = "jrust Servo integration bridge"

[dependencies]
jrust-runtime = { path = "../jrust-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# 事件通道
crossbeam-channel = "0.5"

# 日志
log = "0.4"
env_logger = "0.10"
